[gd_scene load_steps=2 format=3 uid="uid://i4kn6aguwj74"]

[ext_resource type="Script" uid="uid://c7nrsa2ljujuw" path="res://Mesa.gd" id="1_kstou"]

[node name="Mesa" type="CanvasLayer"]
script = ExtResource("1_kstou")

[node name="Jugadas_Derecha" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
grow_horizontal = 0
grow_vertical = 2

[node name="Jugadas_Arriba" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2
alignment = 1

[node name="Jugadas_Izquierda" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
offset_right = 120.0

[node name="ManoJugador" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 150)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="ZonaCentral" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 180)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="BotonMazo" type="Button" parent="ZonaCentral"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_vertical = 4
text = "Robar"

[node name="Pozo" type="MarginContainer" parent="ZonaCentral"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2

[node name="BotonAccion" type="Button" parent="ZonaCentral"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Accion"

[connection signal="pressed" from="ZonaCentral/BotonAccion" to="." method="_on_boton_accion_pressed"]
